<resources>
    <string name="app_name">Travel Tracker</string>
    <string name="places_i_ve_been">Been To</string>
    <string name="location">Example Location</string>
    <string name="description">Description</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="places_to_visit">To Visit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_location">Add Location</string>
    <string name="title_activity_add_place">AddPlaceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="location_name_label">"Location Name: "</string>
    <string name="location_rating_label">"Location Rating: "</string>
    <string name="location_description_label">Location Description:</string>
    <string name="location_visited_label">"Location Visited: "</string>
    <string name="been_to_header">Places I\'ve Been</string>
    <string name="to_visit_header">Places To Visit</string>
</resources>
